test/invalid-semantics/59809_var_used_before_declared/var_used_before_declared.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit =
    var result : Int = x + 1;
    var x : Int = 9;
    print(result)